# sort-bench

./: .gitignore  LICENSE  README.md  impa_manifest.json
.agents/: AGENTS.md
.gemini/: settings.json
.github/workflows/: benchmark-release.yml
algo-c_sorter/: .gitignore  impafile.toml  sorter.c
algo-cpp_sorter/: impafile.toml  sorter.cpp
algo-go_sorter/: go.mod  impafile.toml  main.go
algo-javascript_bun_sorter/: impafile.toml
algo-javascript_deno_sorter/: impafile.toml
algo-javascript_nodejs_sorter/: impafile.toml  main.js
algo-javascript_sorter/: main.js
algo-lean_sorter/: Main.lean  SortBench.lean  impafile.toml  lake-manifest.json  lakefile.toml
algo-python_sorter/: .gitignore  impafile.toml  main.py  pyproject.toml
algo-rust_sorter/: Cargo.toml  impafile.toml
algo-rust_sorter/src/: main.rs
algo-zig_sorter/: impafile.toml
algo-zig_sorter/src/: main.zig
components/exec-c_sorter/: impafile.toml  sorter.c
components/exec-cpp_sorter/: .gitignore
components/exec-csharp_sorter/: AlgoCSharpSorter.csproj  Program.cs  (+1 more)
gen_somombo_unifshuffle/: Main.lean  Main_Multi.lean  RandomArray.lean  ShuffleSample.lean  impafile.toml  lake-manifest.json  lakefile.toml
lab/: benchmarking.py  env_setup.py  exploration.py  faster_sort_study.ipynb  golang_study.ipynb  insertionSort_study.ipynb  javascriptSort_study.ipynb  mergeheapSort_study.ipynb  pyproject.toml  qsort_study.ipynb  rep_study.ipynb  sample_factors.py  slower_study.ipynb  somomboLean_study.ipynb  template.ipynb  template_study.ipynb
web/: .gitignore  README.md  index.html  package.json
(+43 files in other folders)
