[project]
name = "lab"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "anywidget>=0.9.21",
    "marimo>=0.18.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.0",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
