[project]
name = "lab"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "anywidget>=0.9.21",
    "impalab-py",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.0",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
impalab-py = { git = "https://github.com/somombo/impalab.git", subdirectory = "python-sdk", rev = "python-sdk" }
